# Weather-App

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  app.py
app/mockdata/: mockdata.py
app/static/css/: style-day.css  style-night.css  style-nigth.css  style.css
app/static/images/: day-clouds2.xcf
app/static/js/: app.js
app/templates/: home.html  index.html  weather-day.html  weather-night.html  weather-nigth.html  weather.html
